project overview draft

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,8 +19,11 @@
     "# Project Overview\n",
     "---\n",
     "## Data Source\n",
+    "Zillow, one of the top real estate listing platforms in the United States, provides access to a variety of data through its research portal and associated APIs. The data used in this project (`zillow_data.csv`) is sourced from the [research portal](https://www.zillow.com/research/data/) and includes the monthly median home prices of all homes (inclusive of single-family homes, condominiums, and co-operatives homes) per zip code. \n",
     "\n",
-    "## Business Problem"
+    "## Business Problem\n",
+    "The goal of this project is to act as a consultant to a fictional real estate invement firm and provide an answer to the following question:\n",
+    "> What are the top five best zip codes for us to invest in?"
    ]
   },
   {
